fixed header's overflow

--- a/shared.css
+++ b/shared.css
@@ -77,6 +77,7 @@ main{
 }
 
 .main-header {
+    overflow: auto;
     background-color: rgba(239,225,186,1);
     position: fixed;
     top: 0;
